# edge_r_impulse

./: .gitignore  CMakeLists.txt  README.md  README.txt  info.labels  main.cpp
buildv2/: CMakeCache.txt  Makefile  cmake_install.cmake
model-parameters/: model_metadata.h  model_variables.h
testing/: info.labels  sp3_2024-03-31 (5).s1.json.52ld8v2c.ingestion-5547b88db7-gdv5c.json  sp3_2024-03-31 (5).s10.json.52ld8v3q.ingestion-5547b88db7-9bngl.json  sp3_2024-03-31 (5).s100.json.52ld8vnj.ingestion-5547b88db7-gdv5c.json  sp3_2024-03-31 (5).s101.json.52ld8vnh.ingestion-5547b88db7-ffhjb.json  sp3_2024-03-31 (5).s102.json.52ld8vo6.ingestion-5547b88db7-gdv5c.json  sp3_2024-03-31 (5).s103.json.52ld8vp9.ingestion-5547b88db7-ffhjb.json  sp3_2024-03-31 (5).s103.json.52ldu6q1.ingestion-5547b88db7-9bngl.json  sp3_2024-03-31 (5).s106.json.52ld8vpo.ingestion-5547b88db7-gdv5c.json  sp3_2024-03-31 (5).s107.json.52ld8vpp.ingestion-5547b88db7-ffhjb.json  sp3_2024-03-31 (5).s11.json.52ld8v42.ingestion-5547b88db7-ffhjb.json  sp3_2024-03-31 (5).s113.json.52ld8vrb.ingestion-5547b88db7-ffhjb.json  sp3_2024-03-31 (5).s12.json.52ld8v43.ingestion-5547b88db7-ffhjb.json  sp3_2024-03-31 (5).s129.json.52ld8vti.ingestion-5547b88db7-gdv5c.json  sp3_2024-03-31 (5).s13.json.52ld8v47.ingestion-5547b88db7-ffhjb.json  sp3_2024-03-31 (5).s14.json.52ld8v4d.ingestion-5547b88db7-9bngl.json  sp3_2024-03-31 (5).s140.json.52ld8vv4.ingestion-5547b88db7-9bngl.json  sp3_2024-03-31 (5).s15.json.52ld8v4p.ingestion-5547b88db7-ffhjb.json  sp3_2024-03-31 (5).s150.json.52ldu73t.ingestion-5547b88db7-9bngl.json  (+586 more)
(+404 files in other folders)
